05-httroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route2llama
spec:
  parentRefs:
  - name: infgw-llama
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vllm-llama3-8b-instruct
      group: inference.networking.x-k8s.io
      kind: InferencePool
